Fixed baseline alignment.

--- a/assets/css/v2/pre_fare/cr_departures.scss
+++ b/assets/css/v2/pre_fare/cr_departures.scss
@@ -94,7 +94,12 @@
 }
 .departures-card__footer {
   height: 376px;
-  padding: 24px 40px 76px 40px;
+  .departures-card__time-to-destination {
+    margin-left: 96px;
+  }
+  .departures-card__footer-ride-free {
+    margin-left: 96px;
+  }
   .departures-card__footer__clock-icon-container {
     height: 56px;
     width: 56px;
@@ -116,11 +121,14 @@
 
 .departures-card__info-row {
   display: flex;
-  padding-top: 34px;
+  padding-top: 52px;
   .small-svg {
     height: 56px;
     width: 56px;
     margin-left: 64px;
+    &.clock-icon {
+      margin-left: 64px;
+    }
     &.free-cr {
       fill: #00843d;
     }
